--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,3 +22,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@layer components {
+  .align-element{
+    @apply max-w-7xl mx-auto px-8;
+  }
+}
+
